Add css for select rock paper scissors div

--- a/styles.css
+++ b/styles.css
@@ -75,3 +75,5 @@ html, body {
         justify-content: space-evenly;
         align-items: center;
     }
+
+    /** END OF SELECT ROCK/PAPER/SCISSORS DIV **/
