--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ html, body {
     width: 100%;
     height: 100%;
     font-family: 'Rubik', sans-serif;
+    background-color: #F0F0F0;
   }
 
   #play-button-div {
